--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
     "@tensorflow/tfjs-node": "^1.7.2",
     "@tensorflow/tfjs-node-gpu": "^1.7.2",
     "chalk": "^4.0.0",
-    "clone": "^2.1.2"
+    "clone": "^2.1.2",
+    "util-promisify": "^2.1.0"
+  },
+  "devDependencies": {
+    "beefy": "^2.1.8",
+    "browserify": "^16.5.1"
+  },
+  "scripts": {
+    "start": "beefy index.js"
   }
 }
