--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clone": "^2.1.2",
     "gl-mat4": "^1.2.0",
     "regl": "^1.4.2",
+    "regl-camera": "^2.1.1",
     "util-promisify": "^2.1.0"
   },
   "devDependencies": {
